Added new requiered liberies being used after adding new functionality. Will need to remove faiss-cpu if using gpu for this project.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,13 @@
-transformers==4.39.3
-sentence-transformers
-faiss-cpu
+flask
+werkzeug
+python-docx
 PyPDF2
 pdfplumber
-python-docx
+transformers
+sentence-transformers
+faiss-cpu
+torch
 numpy
-Werkzeug
-Flask
+pandas
+beautifulsoup4
+openpyxl
